Implemented finding links+changeovers between stations.